2008-03-06  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c: Use new api for bind tex image.

2008-03-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c: Bind tex image directly instead damage texture.
    
    * src/ccm-screen.c: use gdk_threads_add_timeout_full instead g_timeout
                        only fo testing for now

2008-03-03  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-image.c: Don't repair covered area.

    * src/ccm-pixmap.c: Add y inverted property.
    
    * plugins/freeze/ccm-freeze.c:
    * plugins/magnifier/ccm-magnifier.c:
    * plugins/menu-animation/ccm-menu-animation.c:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/shadow/ccm-shadow.c:
    * src/ccm-pixmap-glitz.c:
    * src/ccm-window-plugin.c:
    * src/ccm-window-plugin.h:
    * src/ccm-window.c: Add y invert parameter to ccm_window_paint plugin
                        interface.
    
    * data/cairo-compmgr.schemas.in:
    * src/ccm-screen.c:
    * src/ccm-screen.h: Add indirect rendering gconf option.

    * src/ccm-window-glitz.c: Check for indirect rendering and set y invert 
                              pixmap option.

2008-02-26  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac: Add pixman 0.9.6 check.
    * src/Makefile.am: 
    * src/ccm-image.c:
    * src/ccm-image.h: Get image object which replace _XSetImage by pixman_blt
                       and add a pseudo XShmGetImage function.
    * src/ccm-pixmap-backend.c:
    * src/ccm-pixmap-backend.h:
    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-image.c:
    * src/ccm-pixmap.c: Merge ccm-pixmap-image and ccm-pixmap-shm, XGetImage and
                        XShmGetImage is now managed in ccm-image.
    
    * src/ccm-pixmap-buffered-shm.c:
    * src/ccm-pixmap-buffered-shm.h:
    * src/ccm-pixmap-shm.c:
    * src/ccm-pixmap-shm.h: Removed SHM is managed in ccm-image.
    