@@ -1,3 +1,15 @@
+2008-03-10  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * plugins/mosaic/ccm-mosaic.c:
+    * src/ccm-display.c:
+    * src/ccm-pixmap-glitz.c:
+    * src/ccm-pixmap-image.c:
+    * src/ccm-pixmap.c:
+    * src/ccm-screen.c:
+    * src/ccm-window-glitz.c:
+    * src/ccm-window-xrender.c:
+    * src/ccm-window.c: Fix some fallback cases
+
 2008-03-06  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * src/ccm-pixmap-glitz.c: Use new api for bind tex image.
